assets/styles/components/_nav-main-menu.scss
// /*  _______________________________________________
//
//     01 MEGA MENU BAR
//     _______________________________________________  */

// TEMP hide debug panel

// button.debug-view {
//   display:none;
//   @include gs-media(d) { display:block; }
// }


.megamenu_container {
  width:100%;
  height: 48px;
  *height: 46px;
  margin:0 auto;
  position: relative;
  z-index:99999;
  @include gs-media(d) {
    height: rhythm(6, 16px);
    @include padding-leader(2);
  }
}

.megamenu {
  list-style:none;
  padding:0;
  position:relative; /* For IE7 */
  margin:0;
  @include font-size(14);
  @include gs-media(d) {
    // margin-left: -12px;  // this is to align the first menu item with the main UAL logo on desktop
  }
}

.megamenu > li {
  float:left;
  margin: 0;
  padding-bottom: 0;
  border:none;
  background-color: $dark-gray; 
  @include prefixer(transition, $transition-bg);

  display:none; // hidemenu on mobile at start  

  @include gs-media(d) {
    background-color: $black; 
    display: inline-block; // show menu items on desktop

    &.active {
      background-color: $dark-gray;
    }
  }
  // .menu-plus {
  //   @extend %icon;
  //   @include font-size(48);
  //   float: right;
  //   color: $white;
  //   text-align: center;
  //   line-height: 48px;
  //   width: 48px;
  //   height: 48px;
  //   cursor: pointer;
  // }
}

// float the search icon on desktop to the right of the screen
.megamenu > li:last-child {
  @include gs-media(d) {
    float: right;
  }
}

.megamenu > li > a {
  @include font-size(14);
  outline:0;
  text-decoration:none;
  display:block;
  padding: 12px 15px 12px 15px;
}


// add plus to the right of each dropdown link on tablet & mobile
.megamenu_drop:after { 
  content: "\e80b"; // fontello plus icon
  font-family: "fontello" !important;
  @include font-size(18);
  position: absolute;
  right: 0;
  color: $white;
  text-align: center;
  line-height: 36px;
  width: 48px;
  height: 48px;
  cursor: pointer;
  
  // hide arrows on desktop
  @include gs-media(d) {
    display: none;
  }

}

// switch to a minus icon when the menu is expanded on tablet & mobile
.megamenu > li.active {
  a.megamenu_drop:after {
    content: "\e810"; // fontello minus icon
  }
}

.megamenu li.megamenu_button {
  display: none;
  position: absolute;
  right: 0;
  top: 0;
  width: 48px;
  height: 48px;
  background-color: $black;
  border-bottom: 0;
  // border-right: 1px solid $aaa-gray;
  @include prefixer(transition, $transition-bg);
  a {
    padding: 0;
    margin: 0;
  }
}

/* Right aligned menu item */
.megamenu li.megamenu_right {
  float:right;
  margin-right:-1px;
}
.megamenu li.megamenu_right a {
  margin-right:5px;
}


// mobile tablet view "hamburger" icon active
li.megamenu_button_active {
  background-color: $dark-gray !important;
}
    
// /*  _______________________________________________

//     02 MEGA MENU CONTAINERS
//     _______________________________________________  */

.megamenu li .dropdown_container,
.megamenu li .dropdown_fullwidth,
.megamenu li .dropdown_multilevel {
  position: absolute;
  margin:0;
  //padding:12px;
  //left:-9999em;
  //top:-9999em;
  display: none;
  // zoom:1;
  z-index:99998;
  float: left;
  h2 a, a {
    @extend %Swiss721BT-Light-important;
    @include font-size(14);

  }
  li > a:hover {
    background-color: $black;
    color: $white;
  } 
}

.megamenu li .dropdown_right {
  right:0;
}

.megamenu .dropdown_12columns,
.megamenu .dropdown_fullwidth {
  width: 100%;
}

.megamenu {
  .mobile-site-search-wrap{
    padding:12px
  }

  .course-finder-txt-input {
    background-color: $bg-gray;
    margin-bottom: 0;
    border: 0;
    height: 36px;
    @include gs-media(d) {
      padding-left: 12px;
    }
  }

  .small-text-link {
    @extend .row;
    @include margin-leader(1);
    margin-bottom: -6px;
    
    a {
      color: $white;
      @include font-size(12);
      margin-left: 12px;
      line-height: 16px;
      border-bottom: 0;
    }

    a:hover {
      border-bottom: 1px dotted $white;
    }
    

  }
  
  .go-search-button {
    @extend .button-link;
    position: absolute;
    right: 0;
    top: 0;
    border-top-width: 0px;
    margin-right: 0px;
    margin-left: 0px;
    text-align: center;
    @include gs-media(d) {
      min-width: gs-width(d, 16, 16, (1,16), true);
      height: 36px;
    }
    

    a {
      color: $white;
      border-bottom: 0;
      padding-left: 0;
      padding-right: 0;
      text-align: center;
      text-decoration: none;
    }
    a:hover {
      color: $white;
    }
  }
}

.dropdown_fullwidth {
  @include padding-leader(2);
  @include padding-trailer(2);
  
  @include gs-media(d) {
    @include padding-leader(4);
    @include padding-trailer(4);
  }
  //box-shadow: 0 0 5px 2px rgba(0,0,0,.1);
  background-color: $dark-gray;
  
  li {
    border-top: 1px dotted $aaa-gray;
    border-bottom: 0;
    padding-bottom: 0;
    &:first-child {
      border-top: 0;
    }
    
    &:last-child {
      border-bottom: 1px dotted $aaa-gray;
    }
  }

  @include gs-media(d) {
    li:first-child {
      border-top: 1px dotted $aaa-gray;
    }
  }

  ul > li > a {
    color: $soft-black;
    @include gs-media(d) {
      color: $white;
    }
    @include padding-leader(1);
    @include padding-trailer(1);
  }
}



// ----------------------------------------

// used in the mega menu to keep the dropdowns "within a content wrapper" on desktop
.dd-menu-dropdown-wrapper {
  @extend .header-wrapper;

  @include gs-media(t, max) {
    width: 100%;
    max-width: 100%;
    padding-left: 0;
    padding-right: 0;
  }
  
  ul > li {
    background-color: $light-gray;
    @include gs-media(d) {
      background-color: $dark-gray;
    }
  }
}

.menu-contain-wrap{
  position: relative;
  width: 100%;
  height: auto;
}
/* ... */

